--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,18 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "lodash": "^4.17.10",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.19"
+    "vue-youtube": "^1.2.5",
+    "vue-youtube-embed": "^2.1.3",
+    "vuelidate": "^0.7.4",
+    "vuetify": "^1.0.19",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
